# libre-everywhere

./: .dockerignore  Dockerfile  OFFLINE_DEPLOYMENT.md  README.md  batch_docker_compose.sh  build-and-export.sh  config.py  convert.py  docker-compose.yml  load-and-run.sh  main.py  pyproject.toml
src/: MhtmlExtractor.py  auth.py  convert.py  logging_config.py  main.py  security.py  validation.py
src/file_converter_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
test/: test_converter.py
test/data/: test_doc.doc  test_hwp.hwp  test_mht.html  test_mht.mht  test_ppt.ppt  test_ppt.pptx  test_xls.xls  test_xls.xlsx
