[project]
name = "file-converter-api"
version = "1.0.0"
description = "Comprehensive file conversion API with LibreOffice, AbiWord and fallback libraries"
authors = [
    {name = "Doyi Kim", email = "dykim34@crowdworks.kr"},
    {name = "John Hong", email = "hongsusoo@crowdworks.kr"}
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8,<3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
    "xlrd>=2.0.0",
    "weasyprint==59.0",
    "pydyf==0.8.0",
    "beautifulsoup4>=4.9.0",
    "lxml>=4.6.0",
    "python-docx>=0.8.11",
    "pyhwp<=0.1b15",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
    "mypy>=0.800",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
package-dir = {"" = "."}

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
    "ruff>=0.14.1",
    "vulture>=2.14",
]

[project.scripts]
file-converter = "src.convert:main"
